# supply-chain-management

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/supply_chain_management_backend/: Cargo.toml  supply_chain_management_backend.did
src/supply_chain_management_backend/src/: lib.rs
src/supply_chain_management_backend/src/context/: mod.rs
src/supply_chain_management_backend/src/entities/: mod.rs  time.rs  unit.rs  urgency.rs
src/supply_chain_management_backend/src/idgenerator/: mod.rs
src/supply_chain_management_backend/src/manufacturing/: mod.rs
src/supply_chain_management_backend/src/planning/: mod.rs
src/supply_chain_management_backend/src/planning/DemandPlanning/: demand.rs  demand_plan.rs  mod.rs
src/supply_chain_management_backend/src/planning/RawMaterialPlanning/: mod.rs  raw_material.rs
src/supply_chain_management_frontend/: package.json
src/supply_chain_management_frontend/src/: App.jsx
