[package]
name = "supply_chain_management_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.5.4"
serde = "1.0.132"
ic-cdk-macros = "0.8.1"
serde_json = "1.0.93"
getrandom = { version = "0.2.3", features = ["js"]}
# rand = "0.7.3"
wasm-bindgen = "0.2.63"
uuid = { version = "1.4.1", features = ["wasm-bindgen", "v4"] }
rand_chacha = "0.3"

rand = { version = "0.8", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand_chacha = "0.3"




# [dependencies.uuid]
# version = "1.8.0"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]
